<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TableRow>
            <RelativeLayout>

                <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/calendarView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:mcv_showOtherDates="all"
                    app:mcv_selectionColor="@color/grey"
                    />
            </RelativeLayout>
        </TableRow>

        <TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="8dp"
                >
                <TextView
                    android:text="@string/user_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:id="@+id/u_id"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:autofillHints=""
                    android:inputType="number" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="40dp"
                    >
                    <Button
                        android:id="@+id/viewStatsButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stats"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:backgroundTint="@color/dark_grey"
                        style="?android:attr/buttonBarButtonStyle" />
                </LinearLayout>
            </LinearLayout>

        </TableRow>

        <TableRow android:layout_width="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/savePassRecordButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/pass"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/light_green"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/saveFailRecordButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/light_red"
                    android:text="@string/fail"
                    android:textColor="@color/white"
                    />

                <Button
                    android:id="@+id/viewRecordButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/view"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/deleteRecordButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/delete" />

            </LinearLayout>
        </TableRow>
        <TableRow>
                <ListView
                    android:id="@+id/listView"
                    android:layout_width="wrap_content"
                    android:layout_height="350sp"
                    android:padding="8dp"
                    />
        </TableRow>
    </TableLayout>

</ScrollView>

